fix aligncenter images not centering

--- a/assets/scss/base/_media.scss
+++ b/assets/scss/base/_media.scss
@@ -11,6 +11,10 @@ img {
 	height: auto;
 	vertical-align: top;
 	border-radius: var(--image-border-radius, 0);
+
+	&.aligncenter {
+		display: block;
+	}
 }
 
 iframe {
